<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context=".AssesmentActivity"
    tools:openDrawer="start">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Assessment and Accreditation "
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Accreditation"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Benefits of Accreditation"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/accreditation"
                android:textColor="#000"
                android:textSize="20dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Eligibility Criteria"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/eligibility"
                android:textColor="#000"
                android:textSize="20dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Units Of Assessment"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/assessment"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Grading"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/grading"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Grievance Redressal"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/grievance"
                android:textColor="#000"
                android:textSize="20dp" />


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_draw_ass"
        android:background="@drawable/background"
        android:layout_width="wrap_content"
        app:headerLayout="@layout/nav_header"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_list" />

</androidx.drawerlayout.widget.DrawerLayout>