<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/drawer_layout2"
    tools:openDrawer="start"
    android:fitsSystemWindows="true"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                android:text="Vision And Mission"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                android:text="Vision"
                android:textStyle="bold"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vision"
                android:lineSpacingExtra="10dp"
                android:textColor="#000"
                android:layout_marginTop="30dp"
                android:textSize="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                android:text="Mission"
                android:textStyle="bold"
               />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mission"
                android:lineSpacingExtra="10dp"
                android:textColor="#000"
                android:layout_marginTop="30dp"
                android:textSize="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                android:text="Value Framework"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_framework"
                android:lineSpacingExtra="10dp"
                android:textColor="#000"
                android:layout_marginTop="30dp"
                android:textSize="20dp"/>

    </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:background="@drawable/background"
        android:id="@+id/nav_draw_abt"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_list"
        android:layout_gravity="start"/>



</androidx.drawerlayout.widget.DrawerLayout>